Adding export options for later java versions (16+) (#19)